recursion.logo.square.FourSquare.scala.error
Compilation error:
FourSquare:3: error: ';' expected but ')' found.
    forward(100:Double);left();forward(100:Double));left();forward(100:Double));left()
                                                  ^