recursion.logo.square.FourSquare.scala.code
override def run() {
  def square() {
    forward(100:Double);left();forward(100:Double));left();forward(100:Double));left()
    return
  }
  square();left();square();left();square();left()
}